fixed pixel alignment

--- a/index.css
+++ b/index.css
@@ -496,7 +496,7 @@ a{
      margin: 0 2%;
   } */
   #grid li:nth-child(3n+3){
-     margin: -9% 4% -9% 4%;
+     margin: -9% 5% -9% 3%;
      -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
      -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg);
      -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
